--- a/example.env
+++ b/example.env
@@ -3,3 +3,4 @@ export DB_PASSWORD=test1234
 export DB_HOSTNAME=10.0.0.1
 export DB_PORT=1433
 export DB_NAME=Test
+export SECRET_KEY_BASE=(mix phx.gen.secret)
